# etna

./: .tags  .tags1  README.md
etna/: CMakeLists.txt  package.xml
etna_calib/: CMakeLists.txt  package.xml  setup.py
etna_calib/config/: camera.yaml  profile3d.yaml  triangulation.yml  triangulation1.yml
etna_calib/data/: _pose0003.txt  _pose0007.txt  _pose0009.txt  chessboard.odg  pchecker.txt  pose0001.txt  pose0002.txt  pose0003.txt  pose0004.txt  pose0005.txt  pose0006.txt  pose0007.txt  pose0008.txt  pose0009.txt  pose0010.txt  pose0011.txt  pose0012.txt  pose0013.txt  pose_checker.txt
etna_calib/data/calib1/: pose0003.txt  pose0005.txt  pose0007.txt
etna_calib/data/calib2/: _pose0008.txt  pose0001.txt  pose0002.txt  pose0003.txt  pose0005.txt  pose0007.txt  pose0009.txt  pose0011.txt
etna_calib/data/calib3/: pose0004.txt  pose0006.txt  pose0007.txt  pose0012.txt  pose0014.txt  pose0015.txt  pose0016.txt
etna_calib/data/calib4/: _pose0007.txt  _pose0011.txt  pose0001.txt  pose0002.txt  pose0004.txt  pose0005.txt  pose0006.txt  pose0008.txt
etna_calib/data/calib5/: _pose0012.txt  _pose0013.txt  pose0003.txt
etna_calib/data/calib6/: info.txt  pchecker.txt  pose0002.txt  pose0003.txt  pose0004.txt  pose0005.txt  pose0006.txt  pose0007.txt  pose0008.txt
etna_calib/data/other/: downsampled.xyz  test11.xyz.REMOVED.git-id  test4_downsampled.xyz
etna_calib/launch/: calib.launch  camera_calibration.launch  webcam.launch  webcam_calibration.launch
etna_calib/scripts/: calib.py  sub_cloud.py  sub_viewer.py
etna_calib/src/icv/: calibration.py  drawing.py  fitting.py  image.py  mlabplot.py
etna_cloud/: CMakeLists.txt  package.xml
etna_cloud/data/: dtest11.xyz  test.ot  xyz_to_pcd.py
etna_cloud/launch/: octomap.launch
etna_cloud/scripts/: fitting.py  pub_cloud.py
etna_cloud/src/: cloud.cpp  find_plane.cpp  mesh.stl  plane_cloud.pcd  resampling.pcd  talker.cpp
etna_db/: etna.odb  etna.py  schema.sql  sqlgui.py  test.db  test.py
etna_db/database/: 85187-07_WC_12Co.RTF  etna.mwb  etna.odb  etna.xlsx  excell.xlsx  myetna.odb
etna_planning/: CMakeLists.txt  README.md  package.xml
etna_planning/config/: workcell.rviz
etna_planning/data/: etna.mod
etna_planning/data/models_stl/: ducky.stl  piece9.stl
etna_planning/data/routines/: etna.mod
etna_planning/launch/: path_planning.launch  robviz.launch
etna_planning/resource/: robviz.ui
etna_planning/resources/: robpath.ui
etna_planning/scripts/: _markers_example.py  _simple_marker.py  markers.py  path_publisher.py  robpathui.py  robviz.py
etna_planning/src/: TestPosIK.py  _TestPosIK.py  _joint_path_command.py  fixed_tf_broadcaster.py  joint_path_command.py  setup.py
etna_planning/src/robpath/: __init__.py  calculate.py  etna.mod  mesh.py  mlabplot.py  polyline.py  rapid.py  robpath.py  robpath.ui  robpathui.py  transformations.py
etna_planning/src/robpath/models_dxf/: curvas_v16.dxf
etna_planning/src/robpath/models_stl/: demo.fcstd  ducky.stl  piece10.stl
etna_planning/src/robpath/routines/: etna.mod
etna_scanning/: CMakeLists.txt  package.xml  setup.py
etna_scanning/config/: camera_profile3d.yaml
etna_scanning/launch/: camera.launch  camera_node.launch  camera_profile.launch  profile.launch  ueye.launch  ueye_profile.launch  usb_cam.launch  usbcam_profile.launch  uvc_cam.launch  webcam_profile.launch
etna_scanning/scripts/: nd_profile.py  nd_webcam.py  pub_camera.py  pub_profile3d.py  pub_webcam.py
etna_scanning/src/: pub_webcam.cpp
etna_scanning/src/robscan/: cpeak.pyx  profile.py  webcam.py
etna_triangulation/: CMakeLists.txt  package.xml
etna_triangulation/config/: _camera_profile3d.yaml  _camera_profile3d_.yaml  camera_profile3d.yaml  profile3d.yaml  webcam_profile3d.yaml
etna_triangulation/data/: pose0002.txt
etna_triangulation/launch/: camera.launch  camera_calibration.launch  camera_profile.launch  ueye.launch  webcam_calibration.launch  webcam_profile.launch
etna_triangulation/scripts/: calib.py  pub_camera.py  pub_profile3d.py  pub_webcam.py
etna_triangulation/src/: __init__.py  icv  icv.py  pub_webcam.cpp  setup.py  sub_webcam.cpp
etna_triangulation/src/config/: triangulation0.yml
etna_triangulation/src/data/: pattern.odg  pose0001.txt  pose0004.txt  pose0008.txt  rdata  test.xyz
etna_triangulation/src/data/calib1/: handeye.txt  pose0001.txt  pose0002.txt  pose0003.txt  pose0004.txt  pose0005.txt  pose0006.txt  pose0007.txt  pose0008.txt  pose0009.txt  pose0010.txt  pose0011.txt  pose0012.txt  profile3d.yaml
etna_triangulation/src/data/calib2/: pose0004.txt  pose0010.txt
etna_triangulation/src/icv/: __init__.py  calculate.py  calibration.py  camera.py  cross.py  fitting.py  image.py  mlabplot.py
etna_workcell/: CMakeLists.txt  package.xml
etna_workcell/config/: workcell.rviz  workcell_visualize.rviz
etna_workcell/doc/: IRB4400.pdf.REMOVED.git-id
etna_workcell/launch/: bagplay.launch  etna_robscan.launch  etna_workcell.launch  irbp_a250.launch  mashes_robscan.launch  mashes_workcell.launch  workcell.launch  workcell4.launch  workcell4_calibration.launch
etna_workcell/meshes/cell/: cell.stl  cell4.dae  cell4.fcstd
etna_workcell/meshes/head_diode/: diode.fcstd  diode.fcstd1  head.stl
etna_workcell/meshes/head_wt03/: head_wt03.step.REMOVED.git-id  head_wt03.stl
etna_workcell/meshes/head_wt03/collision/: head_wt03.stl
etna_workcell/meshes/head_wt03/visual/: head_wt03.stl.REMOVED.git-id
etna_workcell/meshes/irbp_a250/collision/: irbp_a250_0.stl  irbp_a250_1.stl  irbp_a250_2.stl  irbp_a250_3.stl  irbp_a250_4.stl
etna_workcell/meshes/irbp_a250/visual/: IRBP_A250_D1000_M2009_REV1_01.STL  IRBP_A250_D1000_M2009_REV1_01001.STL  IRBP_A250_D1000_M2009_REV1_01002.STL  IRBP_A250_D1000_M2009_REV1_01004.STL  irbp_a250_0.stl  irbp_a250_2.stl  irbp_a250_3.stl  irbp_a250_4.stl
etna_workcell/meshes/table/: table.fcstd  table.stl
etna_workcell/urdf/: abb_robot.xacro  abb_workcell.xacro  diode_head.xacro  etna_workcell.xacro  fiber_head.xacro  irbp_a250.xacro  mashes_workcell.xacro  workcell.xacro  wt03_head.xacro
